# openGL_code

./: CMakeLists.txt  README.md  build_commands.txt
include/: header.h  shaders.h
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  shaders.cpp
